5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1771_3121.log
== TEST (2019-05-23 19:29:28) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
x=int(input("indice do vetor: "))
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		print("EUSAPIA")
	elif (e[posicao]<b[posicao]):
		print("BARSANULFO")
	else:
		print("EMPATE")
	posicao=posicao+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:30:10) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		print("EUSAPIA")
	elif (e[posicao]<b[posicao]):
		print("BARSANULFO")
	else:
		print("EMPATE")
	posicao=posicao+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:37:19) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
		posicao=posicao+1
	elif(ve>vb):
		print("EUSAPIA")
	elif(ve<vb):
		print("BARSANULFO")
	else:
		print("EMPATE")
		
	posicao=posicao+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:39:45) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
		posicao=posicao+1
		print(size(b))
	elif(ve>vb):
		print("EUSAPIA")
	elif(ve<vb):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:41:08) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
		posicao=posicao+1
print(size(b))
	elif(ve>vb):
		print("EUSAPIA")
	elif(ve<vb):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- ERROR:
File "XXXX", line 14
    elif(ve>vb):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:41:26) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
		posicao=posicao+1
	print(size(b))
	elif(ve>vb):
		print("EUSAPIA")
	elif(ve<vb):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- ERROR:
File "XXXX", line 14
    elif(ve>vb):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:41:33) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
		posicao=posicao+1
		print(size(b))
	elif(ve>vb):
		print("EUSAPIA")
	elif(ve<vb):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:42:41) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
		posicao=posicao+1
	elif(ve>vb):
		print(size(b))
		print("EUSAPIA")
	elif(ve<vb):
		print(size(b))
		print("BARSANULFO")
	else:
		print(size(b))
		print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 10:46:32) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
		posicao=posicao+1
	elif(ve>vb):
		print(size(b))
		print("EUSAPIA")
	elif(ve<vb):
		print(size(b))
		print("BARSANULFO")
	else:
		print(size(b))
		print("EMPATE")
-- EXECUTION TIME:
8.78228
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:15:51) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
		posicao=posicao+1
	elif(ve>vb):
		print(size(b))
		print("EUSAPIA")
	elif(ve<vb):
		print(size(b))
		print("BARSANULFO")
	else:
		print(size(b))
		print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:19:02) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
		posicao=posicao+1
	elif(ve>vb):
		print(size(b))
		print("EUSAPIA")
	elif(ve<vb):
		print(size(b))
		print("BARSANULFO")
	else:
		print(size(b))
		print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:21:25) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
	elif(ve>vb):
		print(size(b))
		print("EUSAPIA")
	elif(ve<vb):
		print(size(b))
		print("BARSANULFO")
	else:
		print(size(b))
		print("EMPATE")
	posicao=posicao+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:21:59) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
	elif(ve>vb):
		print(size(b))
		print("EUSAPIA")
	elif(ve<vb):
		print(size(b))
		print("BARSANULFO")
	else:
		print(size(b))
		print("EMPATE")
	posicao=posicao+1
-- EXECUTION TIME:
1.25319
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
12
EUSAPIA
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
18
BARSANULFO
18
EUSAPIA
18
BARSANULFO
18
EUSAPIA
18
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:22:07) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
	elif(ve>vb):
		print(size(b))
		print("EUSAPIA")
	elif(ve<vb):
		print(size(b))
		print("BARSANULFO")
	else:
		print(size(b))
		print("EMPATE")
	posicao=posicao+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:24:30) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:25:00) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- EXECUTION TIME:
0.526715
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:27:32) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
	elif (e[posicao]==b[posicao]):
		ve=ve+0
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:27:51) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
	elif (e[posicao]==b[posicao]):
		ve=ve+0
		vb=vb+0
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:28:35) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
	elif (e[posicao]==b[posicao]):
		ve=ve+0
		vb=vb+0
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:29:16) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
	elif (e[posicao]==b[posicao]):
		ve=ve+0
		vb=vb+0
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- EXECUTION TIME:
0.505155
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:30:38) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
	elif (e[posicao]==b[posicao]):
		ve=ve+0
		vb=vb+0
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:31:16) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
	elif (e[posicao]==b[posicao]):
		ve=ve+0
		vb=vb+0
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:31:31) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
	elif (e[posicao]==b[posicao]):
		ve=ve+0
		vb=vb+0
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:32:04) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
	elif (e[posicao]==b[posicao]):
		ve=ve+0
		vb=vb+0
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:45:18) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
	elif (e[posicao]==b[posicao]):
		ve=ve+0
		vb=vb+0
	elif (e[posicao]==11 and b[posicao]==22):
		vb=vb+1
		ve=ve+0
	elif (e[posicao]==11 and b[posicao]==33):
		vb=vb+1
		ve=ve+0
	elif (e[posicao]==11 and b[posicao]==11):
		ve=ve+0
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==22):
		ve=ve+0
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==11):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==33):
		ve=ve+0
		vb=vb+1
	elif (e[posicao]==33 and b[posicao]==11):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==33 and b[posicao]==22):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==33 and b[posicao]==33):
		ve=ve+0
		vb=vb+0
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- EXECUTION TIME:
0.489335
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:45:22) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]>b[posicao]):
		ve=ve+1
	elif (e[posicao]<b[posicao]):
		vb=vb+1
	elif (e[posicao]==b[posicao]):
		ve=ve+0
		vb=vb+0
	elif (e[posicao]==11 and b[posicao]==22):
		vb=vb+1
		ve=ve+0
	elif (e[posicao]==11 and b[posicao]==33):
		vb=vb+1
		ve=ve+0
	elif (e[posicao]==11 and b[posicao]==11):
		ve=ve+0
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==22):
		ve=ve+0
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==11):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==33):
		ve=ve+0
		vb=vb+1
	elif (e[posicao]==33 and b[posicao]==11):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==33 and b[posicao]==22):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==33 and b[posicao]==33):
		ve=ve+0
		vb=vb+0
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:46:07) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]==11 and b[posicao]==22):
		vb=vb+1
		ve=ve+0
	elif (e[posicao]==11 and b[posicao]==33):
		vb=vb+1
		ve=ve+0
	elif (e[posicao]==11 and b[posicao]==11):
		ve=ve+0
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==22):
		ve=ve+0
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==11):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==33):
		ve=ve+0
		vb=vb+1
	elif (e[posicao]==33 and b[posicao]==11):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==33 and b[posicao]==22):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==33 and b[posicao]==33):
		ve=ve+0
		vb=vb+0
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- EXECUTION TIME:
0.330581
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:46:19) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]==11 and b[posicao]==22):
		vb=vb+1
		ve=ve+0
	elif (e[posicao]==11 and b[posicao]==33):
		vb=vb+1
		ve=ve+0
	elif (e[posicao]==11 and b[posicao]==11):
		ve=ve+0
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==22):
		ve=ve+0
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==11):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==33):
		ve=ve+0
		vb=vb+1
	elif (e[posicao]==33 and b[posicao]==11):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==33 and b[posicao]==22):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==33 and b[posicao]==33):
		ve=ve+0
		vb=vb+0
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- EXECUTION TIME:
0.483185
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:46:58) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]==11 and b[posicao]==22):
		vb=vb+1
		ve=ve+0
	elif (e[posicao]==11 and b[posicao]==33):
		vb=vb+1
		ve=ve+0
	elif (e[posicao]==11 and b[posicao]==11):
		ve=ve+0
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==22):
		ve=ve+0
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==11):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==33):
		ve=ve+0
		vb=vb+1
	elif (e[posicao]==33 and b[posicao]==11):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==33 and b[posicao]==22):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==33 and b[posicao]==33):
		ve=ve+0
		vb=vb+0
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:47:23) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]==11 and b[posicao]==22):
		vb=vb+1
		ve=ve+0
	elif (e[posicao]==11 and b[posicao]==33):
		vb=vb+1
		ve=ve+0
	elif (e[posicao]==11 and b[posicao]==11):
		ve=ve+0
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==22):
		ve=ve+0
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==11):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==33):
		ve=ve+0
		vb=vb+1
	elif (e[posicao]==33 and b[posicao]==11):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==33 and b[posicao]==22):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==33 and b[posicao]==33):
		ve=ve+0
		vb=vb+0
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 18:12:21) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]==11 and b[posicao]==22):
		vb=vb+1
		ve=ve+0
	elif (e[posicao]==11 and b[posicao]==33):
		vb=vb+1
		ve=ve+0
	elif (e[posicao]==11 and b[posicao]==11):
		ve=ve+0
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==22):
		ve=ve+0
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==11):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==22 and b[posicao]==33):
		ve=ve+0
		vb=vb+1
	elif (e[posicao]==33 and b[posicao]==11):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==33 and b[posicao]==22):
		ve=ve+1
		vb=vb+0
	elif (e[posicao]==33 and b[posicao]==33):
		ve=ve+0
		vb=vb+0
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- EXECUTION TIME:
0.450924
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:20:11) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]==33 and b[posicao]==11) or (e[posicao]==22 and b[posicao]==11) or (e[posicao]==33 and b[posicao]==22):
		ve=ve+0
	elif (e[posicao]==11 and b[posicao]==22) or (e[posicao]==11 and b[posicao]==33) or (e[posicao]==22 and b[posicao]==33):
		vb=vb+1
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 18:20:46) 
-- CODE:
from numpy import *
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]==33 and b[posicao]==11) or (e[posicao]==22 and b[posicao]==11) or (e[posicao]==33 and b[posicao]==22):
		ve=ve+0
	elif (e[posicao]==11 and b[posicao]==22) or (e[posicao]==11 and b[posicao]==33) or (e[posicao]==22 and b[posicao]==33):
		vb=vb+1
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- EXECUTION TIME:
0.51613
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:38:53) 
-- CODE:
from numpy import *
jogadas=array([11,22,33])
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]==33 and b[posicao]==11) or (e[posicao]==22 and b[posicao]==11) or (e[posicao]==33 and b[posicao]==22):
		ve=ve+0
	elif (e[posicao]==11 and b[posicao]==22) or (e[posicao]==11 and b[posicao]==33) or (e[posicao]==22 and b[posicao]==33):
		vb=vb+1
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 08:39:46) 
-- CODE:
from numpy import *
jogadas=array([11,22,33])
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]==33 and b[posicao]==11) or (e[posicao]==22 and b[posicao]==11) or (e[posicao]==33 and b[posicao]==22):
		ve=ve+0
	elif (e[posicao]==11 and b[posicao]==22) or (e[posicao]==11 and b[posicao]==33) or (e[posicao]==22 and b[posicao]==33):
		vb=vb+1
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- EXECUTION TIME:
0.591886
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 08:40:43) 
-- CODE:
from numpy import *
jogadas=array([11,22,33])
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]==33 and b[posicao]==11) or (e[posicao]==22 and b[posicao]==11) or (e[posicao]==33 and b[posicao]==22):
		ve=ve+1
	elif (e[posicao]==11 and b[posicao]==22) or (e[posicao]==11 and b[posicao]==33) or (e[posicao]==22 and b[posicao]==33):
		vb=vb+1
	posicao=posicao+1
if(ve>vb):
	print(size(b))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- EXECUTION TIME:
0.32763
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:41:56) 
-- CODE:
from numpy import *
jogadas=array([11,22,33])
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]==33 and b[posicao]==11) or (e[posicao]==22 and b[posicao]==11) or (e[posicao]==33 and b[posicao]==22):
		ve=ve+1
	elif (e[posicao]==11 and b[posicao]==22) or (e[posicao]==11 and b[posicao]==33) or (e[posicao]==22 and b[posicao]==33):
		vb=vb+1
	posicao=posicao+1
if(ve>vb):
	print(size(e))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:43:56) 
-- CODE:
from numpy import *
jogadas=array([11,22,33])
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<=size(e)):
	if (e[posicao]==33 and b[posicao]==11) or (e[posicao]==22 and b[posicao]==11) or (e[posicao]==33 and b[posicao]==22):
		ve=ve+1
	elif (e[posicao]==11 and b[posicao]==22) or (e[posicao]==11 and b[posicao]==33) or (e[posicao]==22 and b[posicao]==33):
		vb=vb+1
	posicao=posicao+1
if(ve>vb):
	print(size(e))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:45:43) 
-- CODE:
from numpy import *
jogadas=array([11,22,33])
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<=size(e)):
	if (e[posicao]==33 and b[posicao]==11) or (e[posicao]==22 and b[posicao]==11) or (e[posicao]==33 and b[posicao]==22):
		ve=ve+1
	elif (e[posicao]==11 and b[posicao]==22) or (e[posicao]==11 and b[posicao]==33) or (e[posicao]==22 and b[posicao]==33):
		vb=vb+1
	posicao=posicao+1
if(ve>vb):
	print(size(e))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 08:50:10) 
-- CODE:
from numpy import *
jogadas=array([11,22,33])
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]==33 and b[posicao]==11) or (e[posicao]==22 and b[posicao]==11) or (e[posicao]==33 and b[posicao]==22):
		ve=ve+1
	elif (e[posicao]==11 and b[posicao]==22) or (e[posicao]==11 and b[posicao]==33) or (e[posicao]==22 and b[posicao]==33):
		vb=vb+1
	posicao=posicao+1
if(ve>vb):
	print(size(e))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- EXECUTION TIME:
0.352922
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:53:28) 
-- CODE:
from numpy import *
jogadas=array([11,22,33])
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]==33 and b[posicao]==11) or (e[posicao]==22 and b[posicao]==11) or (e[posicao]==33 and b[posicao]==22):
		ve=ve+1
	elif (e[posicao]==11 and b[posicao]==22) or (e[posicao]==11 and b[posicao]==33) or (e[posicao]==22 and b[posicao]==33):
		vb=vb+1
	posicao=posicao+1
if(ve>vb):
	print(size(e))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:54:09) 
-- CODE:
from numpy import *
jogadas=array([11,22,33])
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]==33 and b[posicao]==11) or (e[posicao]==22 and b[posicao]==11) or (e[posicao]==33 and b[posicao]==22):
		ve=ve+1
	elif (e[posicao]==11 and b[posicao]==22) or (e[posicao]==11 and b[posicao]==33) or (e[posicao]==22 and b[posicao]==33):
		vb=vb+1
	posicao=posicao+1
if(ve>vb):
	print(size(e))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:54:35) 
-- CODE:
from numpy import *
jogadas=array([11,22,33])
e=array(eval(input("jogadas eusapia: ")))
b=array(eval(input("jogadas barsanulfo: ")))
posicao=0
ve=0
vb=0
while (posicao<size(e)):
	if (e[posicao]==33 and b[posicao]==11) or (e[posicao]==22 and b[posicao]==11) or (e[posicao]==33 and b[posicao]==22):
		ve=ve+1
	elif (e[posicao]==11 and b[posicao]==22) or (e[posicao]==11 and b[posicao]==33) or (e[posicao]==22 and b[posicao]==33):
		vb=vb+1
	posicao=posicao+1
if(ve>vb):
	print(size(e))
	print("EUSAPIA")
elif(ve<vb):
	print(size(b))
	print("BARSANULFO")
else:
	print(size(b))
	print("EMPATE")	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
